[package]
name = "giskard"
version = "0.1.0"
authors = ["Victor Berger <victor.berger@m4x.org>"]

[dependencies]
chrono = "0.4"
todo-txt = "1.1"
clap = { version = "2.0", optional = true }
serde = { version = "1.0", optional = true }
serde_derive = { version = "1.0", optional = true }
toml = { version = "0.4", optional = true }
xdg = { version = "2.1", optional = true }

[[bin]]
name = "giskard"
path = "src/bin/giskard/main.rs"
required-features = ["cli"]

[features]
cli = ["clap", "serde", "serde_derive", "toml", "xdg"]